Thu Aug  5 17:11:43 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (void_expr_gen): add 'possibly' to warning message.
	  [ruby-core:31611]

Thu Aug  5 16:57:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (glob_make_pattern): fold continuous PLAINs to get rid of
	  snail at too deep path.  [ruby-dev:41871]

Thu Aug  5 16:42:41 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_set_len): should fail to modify shared string.

Thu Aug  5 14:12:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (ruby_init_loadpath_safe): ensure sopath to be modifiable

Thu Aug  5 12:39:14 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (str_make_independent_expand): fix buffer overflow
	  while shrinking.

Thu Aug  5 06:42:31 2010  Tanaka Akira  <akr@fsij.org>

	* file.c (realpath_rec): call rb_str_modify before rb_str_set_len.

Wed Aug  4 19:37:00 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_set_len): rb_str_modify cannot work before the
	  length is set, which is a precondition for rb_str_modify.

Wed Aug  4 15:47:21 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): no need to create the directory
	  at each library file. this change makes making ext faster.

Wed Aug  4 06:25:04 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_atime): Pathname#atime translated from
	  pathname.rb.

Tue Aug  3 21:16:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* random.c (Init_Random): add Random::DEFAULT.

Tue Aug  3 21:01:10 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_check_hash_type): added.

Tue Aug  3 20:30:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (rb_big_eq): never equal to infinity.
	  [ruby-core:31603]

	* rational.c (nurat_div): hack for integral float divisor.

Tue Aug  3 14:42:12 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/mkext.rb: remove purelib, fixes a bug in r28440, r28441.

	* spec/default.mspec: ditto.
